removed unused utility classes

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             />
             <div class="wrapper-content">
                 <header>
-                    <h1 class="title serif-400">Simple Omelette Recipe</h1>
-                    <p class="description outfit-400">
+                    <h1 class="title">Simple Omelette Recipe</h1>
+                    <p class="description">
                         An easy and quick dish, perfect for any meal. This
                         classic omelette combines beaten eggs cooked to
                         perfection, optionally filled with your choice of
